# TSFlow

./: .gitattributes  .gitignore  README.md  experiment.py  experiment_ps.py  fcntl.py  pyproject.toml
.aim/: aim_db  run_metadata.sqlite
configs_local/: train_conditional.yaml  train_conditional_exchange.yaml  train_conditional_solar.yaml  train_conditional_weather.yaml  train_ps.yaml
configs_seml/: train.yaml  train_ps.yaml
configs_seml/datasets/: train_electricity.yaml  train_electricity_ps.yaml  train_exchange.yaml  train_exchange_ps.yaml  train_kddcup.yaml  train_kddcup_ps.yaml  train_m4hourly.yaml  train_m4hourly_ps.yaml  train_solar.yaml  train_solar_ps.yaml  train_traffic.yaml  train_traffic_ps.yaml  train_ubertlc.yaml  train_ubertlc_ps.yaml  train_wiki2000.yaml  train_wiki_ps.yaml
logs/008fdf2bf5a447f9a1592d53/: best_checkpoint.ckpt
logs/035fb0a73a2e4e7d8bddfedf/: best_checkpoint.ckpt  results.yaml
logs/03a60c33ee474d64a4b01ee6/: results.yaml
logs/042ccef3a69c4d5f9a349355/: best_checkpoint.ckpt
logs/0c50355da99f45e2ba337fc1/: best_checkpoint.ckpt
logs/0f9f5662b20445fe9d194da7/: best_checkpoint.ckpt
logs/1bee8b49434044f99a5a7161/: best_checkpoint.ckpt
logs/1d7ae5978c744d53b5de9000/: best_checkpoint.ckpt
logs/25942b26c0274e31bdbb53b9/: best_checkpoint.ckpt  results.yaml
logs/2d6fd31a538f43e49aa923f1/: best_checkpoint.ckpt
logs/3abd69d6e4a54b6eabda7d7c/: results.yaml
logs/3bab19107e344336a7d4b0da/: best_checkpoint.ckpt  results.yaml
logs/3e2a37690afa4396bae196f9/: best_checkpoint.ckpt  (+1 more)
tsflow/: __init__.py  callback.py  dataset.py
(+530 files in other folders)
