[build-system]
requires = ["flit_core ~= 3.7"]
build-backend = "flit_core.buildapi"

[project]
name = "tsflow"
dynamic = ["version", "description"]
authors = [{name = "Marcel Kollovieh", email = "m.kollovieh@tum.de"},]
dependencies = [
    "pykeops==2.1.1",
    "torchtyping==0.1.5",
    "linear_attention_transformer==0.19.1",
    "torchdyn==1.0.6",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F821"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tsflow = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gluonts = "==0.14.4"
aim = "==3.20.1"
lightning = "==2.5.0.post0"
scipy = "==1.15.1"
pot = "==0.9.5"
scikit-learn = "==1.6.1"
einops = "==0.8.1"
ema_pytorch = "==0.7.7"
opt_einsum = "==3.4.0"
attrs = "==25.1.0"
hydra-core = "==1.3.1"
jupyter = "==1.1.0"
gpytorch = "==1.14"

[tool.pixi.feature.cpu]
dependencies = {pytorch-cpu = "==2.5.1"}

[tool.pixi.feature.gpu]
system-requirements = {cuda = "12"}
channels = ["nvidia"]
dependencies = {pytorch-gpu = "==2.5.1"}


[tool.pixi.environments]
default = {features = ["gpu"]}
cpu = {features = ["cpu"]}